[tool.poetry]
authors = ["alex-treebeard <alex@treebeard.io>"]
description = ""
homepage = "https://github.com/treebeardtech/nbwrite"
license = "Apache-2.0"
name = "test"
version = "v0.1"

[tool.poetry.dependencies]
pytest = ">=6.1.0"
python = "^3.9.0"

[tool.poetry.dev-dependencies]
nbmake = "^1.4.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]
